crates/macro/ui-tests/missing-catch.stderr
error[E0277]: type `Result<wasm_bindgen::JsValue, wasm_bindgen::JsValue>` is not supported by wasm-bindgen
 --> ui-tests/missing-catch.rs:6:12
  |
3 | #[wasm_bindgen]
  | --------------- in this procedural macro expansion
...
6 |     pub fn foo() -> Result<JsValue, JsValue>;
  |            ^^^ `Result<wasm_bindgen::JsValue, wasm_bindgen::JsValue>` cannot be converted to/from JavaScript in this position
  |
  = help: the trait `WasmPrimitive` is not implemented for `Result<wasm_bindgen::JsValue, wasm_bindgen::JsValue>`
  = note: if `Result<wasm_bindgen::JsValue, wasm_bindgen::JsValue>` is meant to be imported from or exported to JavaScript, annotate it with the `#[wasm_bindgen]` attribute
  = help: the following other types implement trait `WasmPrimitive`:
            ()
            f32
            f64
            i32
            i64
            u32
            u64
  = note: required for `Result<wasm_bindgen::JsValue, wasm_bindgen::JsValue>` to implement `FromWasmAbi`
  = note: this error originates in the attribute macro `wasm_bindgen` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0277]: type `Result<wasm_bindgen::JsValue, wasm_bindgen::JsValue>` is not supported by wasm-bindgen
 --> ui-tests/missing-catch.rs:3:1
  |
3 | #[wasm_bindgen]
  | ^^^^^^^^^^^^^^^ `Result<wasm_bindgen::JsValue, wasm_bindgen::JsValue>` cannot be converted to/from JavaScript in this position
  |
  = help: the trait `WasmPrimitive` is not implemented for `Result<wasm_bindgen::JsValue, wasm_bindgen::JsValue>`
  = note: if `Result<wasm_bindgen::JsValue, wasm_bindgen::JsValue>` is meant to be imported from or exported to JavaScript, annotate it with the `#[wasm_bindgen]` attribute
  = help: the following other types implement trait `WasmPrimitive`:
            ()
            f32
            f64
            i32
            i64
            u32
            u64
  = note: required for `Result<wasm_bindgen::JsValue, wasm_bindgen::JsValue>` to implement `FromWasmAbi`
  = note: this error originates in the attribute macro `wasm_bindgen` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0599]: the method `join` exists for struct `WasmRet<Result<JsValue, JsValue>>`, but its trait bounds were not satisfied
 --> ui-tests/missing-catch.rs:3:1
  |
3 | #[wasm_bindgen]
  | ^^^^^^^^^^^^^^^ method cannot be called on `WasmRet<Result<JsValue, JsValue>>` due to unsatisfied trait bounds
  |
  = note: the following trait bounds were not satisfied:
          `Result<wasm_bindgen::JsValue, wasm_bindgen::JsValue>: WasmPrimitive`
          which is required by `Result<wasm_bindgen::JsValue, wasm_bindgen::JsValue>: WasmAbi`
  = note: this error originates in the attribute macro `wasm_bindgen` (in Nightly builds, run with -Z macro-backtrace for more info)
